Fix table border radius visual issue (#11288)
* Fix table border radius

* Add htHasScrollX, htHasScrollY class and styles

* - Clean up the scrollbar class names adding logic.

* Fix lint

---------

--- a/handsontable/src/styles/base/_base.scss
+++ b/handsontable/src/styles/base/_base.scss
@@ -66,16 +66,12 @@
     }
 
     // Background
-    & > :not(.ht_clone_top, .ht_clone_inline_start) {
-      .wtHolder {
-        background-color: var(--ht-background-color);
-      }
-    }
-
-    .ht_clone_top,
-    .ht_clone_inline_start {
-      .htCore {
-        background-color: var(--ht-background-color);
+    &.htHasScrollX,
+    &.htHasScrollY {
+      .ht_master {
+        .wtHolder {
+          background-color: var(--ht-background-color);
+        }
       }
     }
 
@@ -356,6 +352,7 @@
       outline-width: 0;
       table-layout: fixed;
       cursor: default;
+      background-color: var(--ht-background-color);
     }
 
     col {
